Starting with 1.47, changes marked with SYSLINUX, PXELINUX, ISOLINUX
or EXTLINUX apply to that specific program only; other changes apply
to all derivatives.

Changes in 4.10:
	* PXELINUX: An entirely new network implementation based on
	  the lwIP embedded TCP/IP stack.  As a result, plain PXELINUX
	  can now support HTTP and FTP without gPXE/iPXE.
	* Rename the "ipappend" option to "sysappend" ("ipappend" is
	  still accepted as an alias) and make it available for all
	  derivatives.  Add additional strings derived from the system
	  DMI/SMBIOS information if available.
	* "sysappend" strings are also sent as http cookies, with the
	  prefix _Syslinux_ added, on all http transfers.  This can be
	  overridden with the SENDCOOKIES configuration file command.

Changes in 4.05:
	* HDT updated, and now supports uploading data to a TFTP
	  server.
	* ISOLINUX: remove the .img file support; it has been broken
	  on virtually all systems since the beginning, and has been
	  totally broken since 4.00 at least.  Use MEMDISK instead.
	* chain.c32: Support chaining ReactOS' FreeLdr (Shao Miller)

Changes in 4.04:
	* PXELINUX: Fix handling of unqualified DNS names.
	* PXELINUX: Fix timer bug when PXELINUX might be unloaded
	  (Gene Cumm).
	* core/writedec.inc: Fix duplicate declaration and overflow
	  (Gene Cumm).
	* GCC 4.5 fixes.
	* sample directory: Fix Makefile include (Gene Cumm).
	* ver.com: New universal DOS/COMBOOT application to display
	  version information (includes DRMK) (Gene Cumm).
	* rosh.c32: updated; Using getopt() for internal commands to aid
	  parsing options; Fix bugs in ls; add warm reboot and echo
	  (Gene Cumm).
	* com32: fix a file descriptor leak.
	* gfxboot.c32: handle TEXT..ENDTEXT; error out on no LABELs
	  found (Sebastian Herbszt).
	* Fix booting on non-partitioned devices.
	* MBR, isohybrid: Workaround for a BIOS issue on Acer
	  Travelmate and possibly other machines.
        * COM32: Adding ACPI parsing libary